// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smoke testing renders disabled 1`] = `
<Row
  gutter={16}
>
  <Col
    xs={16}
  >
    <Input
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value={0}
    />
  </Col>
  <Col
    className="lighten"
    xs={8}
  />
</Row>
`;

exports[`smoke testing renders with a unit 1`] = `
<Row
  gutter={16}
>
  <Col
    xs={16}
  >
    <Input
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value={0}
    />
  </Col>
  <Col
    className="lighten"
    xs={8}
  >
    lbs
  </Col>
</Row>
`;

exports[`smoke testing renders with required values 1`] = `
<Row
  gutter={16}
>
  <Col
    xs={16}
  >
    <Input
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value={0}
    />
  </Col>
  <Col
    className="lighten"
    xs={8}
  />
</Row>
`;

exports[`smoke testing renders with required values 2`] = `
<Row
  gutter={16}
>
  <Col
    xs={16}
  >
    <Input
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value={12}
    />
  </Col>
  <Col
    className="lighten"
    xs={8}
  />
</Row>
`;
